pagination and count added to all required tables